feat: Añadir soporte para archivos mutuamente exclusivos en el componente de subida de archivos, mejorando la validación y la experiencia del usuario al evitar selecciones conflictivas. También se realizaron ajustes menores en el CSS del componente de homologación de asignaturas.

--- a/src/app/pages/estudiante/paz-salvo/paz-salvo.component.html
+++ b/src/app/pages/estudiante/paz-salvo/paz-salvo.component.html
@@ -14,7 +14,8 @@
       <app-file-upload
         [archivos]="archivosActuales"
         (archivosChange)="onArchivosChange($event)"
-        [reset]="resetFileUpload">
+        [reset]="resetFileUpload"
+        [archivosExclusivos]="archivosExclusivos">
       </app-file-upload>
 
       <div class="enviar-solicitud mt-4">
