feat: Implementar formulario de solicitud de cursos intersemestrales, incluyendo validaciones y carga de datos del usuario. Se añaden nuevos modelos y métodos en el servicio para gestionar solicitudes de cursos nuevos, así como mejoras en la visualización de cursos y preinscripciones. Se optimiza la experiencia del usuario con mensajes de éxito y errores en el proceso de envío.

--- a/src/app/pages/estudiante/cursos-intersemestrales/cursos-ofertados/cursos-ofertados.component.html
+++ b/src/app/pages/estudiante/cursos-intersemestrales/cursos-ofertados/cursos-ofertados.component.html
@@ -4,8 +4,8 @@
   <app-curso-list
     *ngIf="!cargando"
     [cursos]="cursos"
-    [displayedColumns]="['codigo','nombre','docente','cupos','estado','acciones']"
-    [acciones]="['inscribir']"
+    [displayedColumns]="['codigo','nombre','creditos','docente','cupos','espacio','estado','acciones']"
+    [acciones]="['ver']"
     (accionClick)="onAccionCurso($event)"
   ></app-curso-list>
 
