--- a/src/app/shared/components/curso-list/curso-list.component.html
+++ b/src/app/shared/components/curso-list/curso-list.component.html
@@ -16,20 +16,32 @@
 
     <!-- Nombre -->
     <ng-container matColumnDef="nombre">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre del Curso</th>
       <td mat-cell *matCellDef="let curso">{{ curso.nombre }}</td>
+    </ng-container>
+
+    <!-- Créditos -->
+    <ng-container matColumnDef="creditos">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Créditos</th>
+      <td mat-cell *matCellDef="let curso">{{ curso.creditos || 'N/A' }}</td>
     </ng-container>
 
     <!-- Docente -->
     <ng-container matColumnDef="docente">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Docente</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Docente Asignado</th>
       <td mat-cell *matCellDef="let curso">{{ curso.docente }}</td>
     </ng-container>
 
     <!-- Cupos -->
     <ng-container matColumnDef="cupos">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Cupos</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Cupo Estimado</th>
       <td mat-cell *matCellDef="let curso">{{ curso.cupos }}</td>
+    </ng-container>
+
+    <!-- Espacio -->
+    <ng-container matColumnDef="espacio">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Espacio Asignado</th>
+      <td mat-cell *matCellDef="let curso">{{ curso.espacio || 'Por asignar' }}</td>
     </ng-container>
 
     <!-- Estado -->
@@ -46,7 +58,7 @@
       <td mat-cell *matCellDef="let curso">
         <ng-container *ngFor="let accion of acciones">
           <button mat-raised-button color="primary" (click)="ejecutarAccion(accion, curso)">
-            {{ accion | titlecase }}
+            {{ getAccionDisplayName(accion) }}
           </button>
         </ng-container>
       </td>
