feat: Actualizar el componente de cursos ofertados para eliminar acciones innecesarias y mejorar la carga de datos del usuario. Se añaden mensajes de consola para seguimiento y se implementa lógica para mostrar cursos de prueba en caso de que no haya datos disponibles. Mejora la experiencia del usuario al proporcionar información clara durante la carga y envío de solicitudes.

--- a/src/app/pages/estudiante/cursos-intersemestrales/cursos-ofertados/cursos-ofertados.component.html
+++ b/src/app/pages/estudiante/cursos-intersemestrales/cursos-ofertados/cursos-ofertados.component.html
@@ -4,8 +4,8 @@
   <app-curso-list
     *ngIf="!cargando"
     [cursos]="cursos"
-    [displayedColumns]="['codigo','nombre','creditos','docente','cupos','espacio','estado','acciones']"
-    [acciones]="['ver']"
+    [displayedColumns]="['codigo','nombre','creditos','docente','cupos','espacio','estado']"
+    [acciones]="[]"
     (accionClick)="onAccionCurso($event)"
   ></app-curso-list>
 
