--- a/src/app/pages/estudiante/cursos-intersemestrales/solicitudes/solicitudes.component.html
+++ b/src/app/pages/estudiante/cursos-intersemestrales/solicitudes/solicitudes.component.html
@@ -69,7 +69,7 @@
 
   <!-- Mensaje de éxito -->
   <div *ngIf="solicitudEnviada" class="success-message">
-    <mat-icon color="primary">check_circle</mat-icon>
+    <mat-icon class="success-icon">check_circle</mat-icon>
     <p>¡Solicitud enviada exitosamente!</p>
     <p>Tu solicitud ha sido registrada y será revisada por el equipo académico.</p>
   </div>
